# QUARK-plugin-quantinuum

./: DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: single_pipeline_local_aer_simulator.yml  single_pipeline_nexus.yml  test_pipeline_config.yml
src/quark_plugin_quantinuum/: __init__.py
src/quark_plugin_quantinuum/backends/: aer_simulator.py  helpers.py  quantinuuum_nexus.py
src/quark_plugin_quantinuum/benchmarks/free_fermion/: __init__.py  free_fermion.py  free_fermion_helpers.py
src/quark_plugin_quantinuum/compilation/: quantinuum_nexus.py
src/quark_plugin_quantinuum/converters/: pytket_to_qiskit_circuits.py
src/quark_plugin_quantinuum/free_fermion/: free_fermion.py
src/quark_plugin_quantinuum/interfaces/: backend_input_pytket.py  backend_input_qiskit.py  backend_result.py  benchmark_circuits_pytket.py  benchmark_circuits_qiskit.py  nexus_compilation_result.py  nexus_upload_result.py
src/quark_plugin_quantinuum/miscellaneous/: nexus_upload.py
tests/configs/: free_fermion_test_config.yml
